test/data/syntax-errors/invalid-type-function-declaration.jen
f: numba, number -> number
f (x, y) :
  return x + y
